<resources>
    <string name="app_name">Memento</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!--Activities-->
    <string name="title_learn">Learn</string>

    <!--Messages-->
    <string name="message_close_app">Close application?</string>


    <!--Buttons-->
    <string name="close_app">Close</string>
    <string name="cancel">Cancel</string>
    <string name="empty_list">There are no notes</string>
    <string name="empty_list_reminder_notes">There are no upcoming reminders</string>

    <string name="take_photo">Take Photo</string>

    <string name="menu_nav_notes">Notes</string>
    <string name="menu_nav_notes_reminders">Reminders</string>
    <string name="menu_nav_notes_archive">Archive</string>

    <!--Hints-->
    <string name="hint_note_title">Title</string>
    <string name="hint_note_body">Note</string>
    <string name="hint_train_text">To make the app  better understand your writing, first you need to provide some samples
     of your hand writing. BLA bla bla ......BLA bla bla ......BLA bla bla ...... To begin press the below button</string>
    <string name="dots">...</string>

    <!--BottomSheet-->
    <string name="bottom_sheet_cancel">Cancel</string>
    <string name="bottom_sheet_send">Send</string>
    <string name="bottom_sheet_protect">Protect</string>
    <string name="bottom_sheet_set_reminder">Set reminder</string>
    <string name="bottom_sheet_add_label">Add label</string>

    <!--Fingerprint-->
    <string name="use_password">Use password</string>
    <string name="sign_in">Sign in</string>
    <string name="ok">Ok</string>
    <string name="password">Password</string>
    <string name="fingerprint_description">Confirm fingerprint to continue</string>
    <string name="fingerprint_hint">Touch sensor</string>
    <string name="new_fingerprint_enrolled_description">A new fingerprint was added to this device, so your password is required.</string>
    <string name="password_description">Enter your password to continue</string>

    <!--Keys-->
    <string name="key_note_id">activity_note_id</string>
    <string name="key_pref_settings_reminder">pref_key_reminder_settings</string>
    <string name="key_pref_morning_time">pref_key_morning_time</string>
    <string name="key_pref_location">pref_key_location</string>
    <string name="key_pref_settings_note">pref_key_note_settings</string>
    <string name="key_pref_"></string>
    <string name="key_intent_geofence_reminder">intent_geofence_reminder</string>
    <string name="key_pref_settings_ocr">pref_ocr_settings</string>

    <!--Other-->
    <string name="pref_title_ocr">Ocr</string>
    <string name="pref_title_learn">Learn</string>

    <!--Reminder-->
    <string name="tomorrow_morning">Tomorrow morning</string>
    <string name="morning_time">8:30</string>
    <string name="pick_date_time"><![CDATA[Pick date & time]]></string>
    <string name="at_work">At work</string>
    <string name="set_work">not set</string>
    <string name="pick_location">Pick location</string>
    <string name="reminder_positive_button">Set</string>
    <string name="reminder_negative_button">Cancel</string>
    <string name="pref_reminder_tile">Reminder</string>
    <string name="pref_note_title">Note</string>
    <string name="remider_work_location_not_set">Work location not set!</string>


</resources>
