<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_notes"
            android:icon="@drawable/ic_menu_notes"
            android:title="@string/menu_nav_notes" />
        <item
            android:id="@+id/nav_notes_reminder"
            android:icon="@drawable/ic_menu_priority"
            android:title="@string/menu_nav_notes_reminders" />

        <item
            android:id="@+id/nav_notes_archive"
            android:icon="@drawable/ic_menu_arcchive"
            android:title="@string/menu_nav_notes_archive" />

    </group>

    <item android:title="">
        <menu>

            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_menu_settings"
                android:title="Settings" />
            <item
                android:id="@+id/nav_info"
                android:icon="@drawable/ic_menu_info"
                android:title="About" />
        </menu>
    </item>

</menu>
